config: Add missing dependencies

--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
   "homepage": "https://github.com/ent3r/corax-bot-nodejs-rewrite#readme",
   "dependencies": {
     "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
     "mongoose": "^5.10.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.0",
     "@types/mongoose": "^5.7.36",
+    "cross-env": "^7.0.2",
     "eslint": "^7.7.0"
   }
 }
