--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^5.10.0",
     "ms": "^2.1.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.0",
