--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "discord-command-parser": "^1.4.3",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.0",
     "ms": "^2.1.2",
     "ts-node": "^9.0.0",
