--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.2",
     "ms": "^2.1.2",
+    "node-cache": "^5.1.2",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "winston": "^3.3.3"
